added used style is Shop Component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,36 @@
-.App {
+.like_btn{
+  background-color: green;
+  font-weight: bold;
+  width: 65px;
+  height: 30px;
+  border: 1px solid black;
   text-align: center;
+  padding: 5px 0px 5px 0px;
+  margin: 0px 5px 0px 5px;
+  box-shadow: 4px 4px #888888;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dislike_btn{
+  background-color: red;
+  font-weight: bold;
+  width: 65px;
+  height: 30px;
+  border: 1px solid black;
+  text-align: center;
+  padding: 5px 0px 5px 0px;
+  margin: 0px 5px 0px 5px;
+  box-shadow: 4px 4px #888888;
+  border-raduis: 4px;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box_shop{
+  width: 100px;
+  height: 115px;
+  border: 2px double;
+  margin: 10px;
+  padding: 7px;
+  text-align: center;
 }
