--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,3 +34,9 @@
   padding: 7px;
   text-align: center;
 }
+
+.login_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
