--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,7 +22,7 @@
   padding: 5px 0px 5px 0px;
   margin: 0px 5px 0px 5px;
   box-shadow: 4px 4px #888888;
-  border-raduis: 4px;
+  border-radius: 4px;
   cursor: pointer;
 }
 
